--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,13 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
   
 </head>
+
 <body>
   <app-root></app-root>
+
+  <div class="loading">
+    <h1>Angular Material</h1>
+  </div>
+
 </body>
 </html>
