--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,20 @@
 </head>
 
 <body>
-  <app-root></app-root>
-
-  <div class="loading">
-    <h1>Angular Material</h1>
-  </div>
-
+  <app-root>
+      <div style="
+      vertical-align: middle;
+      text-align: center;
+      color: rgb(216, 18, 173);
+      border-style: none;
+      margin: 0;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      margin-right: -50%;
+      transform: translate(-50%, -50%);">
+        <img heigh="100" width="100" src="/assets/loader.svg" />
+      </div>
+  </app-root>
 </body>
 </html>
