--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>AngularMaterial</title>
@@ -8,13 +9,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
-  
+  <link rel="stylesheet" href="//cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
+  <link rel="stylesheet" href="//cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
 </head>
 
 <body>
   <app-root>
-      <div style="
+    <div style="
       vertical-align: middle;
       text-align: center;
       color: rgb(216, 18, 173);
@@ -25,8 +26,9 @@
       left: 50%;
       margin-right: -50%;
       transform: translate(-50%, -50%);">
-        <img heigh="100" width="100" src="/assets/loader.svg" />
-      </div>
+      <img heigh="100" width="100" src="/assets/loader.svg" />
+    </div>
   </app-root>
 </body>
+
 </html>
