--- a/src/index.html
+++ b/src/index.html
@@ -9,26 +9,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="//cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
-  <link rel="stylesheet" href="//cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
 </head>
 
 <body>
-  <app-root>
-    <div style="
-      vertical-align: middle;
-      text-align: center;
-      color: rgb(216, 18, 173);
-      border-style: none;
-      margin: 0;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      margin-right: -50%;
-      transform: translate(-50%, -50%);">
-      <img heigh="100" width="100" src="/assets/loader.svg" />
-    </div>
-  </app-root>
+  <app-root></app-root>
 </body>
 
 </html>
