--- a/src/index.html
+++ b/src/index.html
@@ -23,17 +23,7 @@
 <body>
   <app-root></app-root>
 
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/service-worker.js')
-      .then((registration) => {
-        console.log('SW registered');
-      })
-      .catch((err) => {
-        console.log('SW error', err);
-      });
-    }
-  </script>
+  <script></script>
   
 </body>
 
